// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScopeModal step ScopeFormModal initial display requesting authorization 1`] = `
<form class="wrapper">
  <div class="content ">
    <div class="scopeFormModal form-row">
      <label htmlFor="password" class="label">password</label>
      <div>
        <input class="input" type="password" name="password" id="password" required
        placeholder="Password" autoFocus />
      </div>
    </div>
    <div class="scopeFormModal">Requesting authorization...</div>
  </div>
  <footer class="footer">
    <button type="reset" value="Reset">Back</button>
    <button type="submit" value="Submit" disabled>Next</button>
  </footer>
</form>
`;

exports[`ScopeModal step ScopeFormModal initial display with TOTP only 1`] = `
<form class="wrapper">
  <div class="content ">
    <div class="scopeFormModal form-row">
      <label htmlFor="password" class="label">password</label>
      <div>
        <input class="input" type="password" name="password" id="password" required
        placeholder="Password" autoFocus />
      </div>
    </div>
    <div class="scopeFormModal form-row">
      <label htmlFor="twoFactorCode" class="label">2FA code</label>
      <div>
        <input class="input" type="text" name="twoFactorCode" id="twoFactorCode"
        autoCapitalize="off" autoCorrect="off" autoComplete="off" minLength="6"
        maxLength="8" required />
      </div>
    </div>
  </div>
  <footer class="footer">
    <button type="reset" value="Reset">Back</button>
    <button type="submit" value="Submit">Next</button>
  </footer>
</form>
`;

exports[`ScopeModal step ScopeFormModal initial display with U2F and TOTP 1`] = `
<form class="wrapper">
  <div class="content ">
    <div class="scopeFormModal form-row">
      <label htmlFor="password" class="label">password</label>
      <div>
        <input class="input" type="password" name="password" id="password" required
        placeholder="Password" autoFocus />
      </div>
    </div>
    <div class="scopeFormModal form-row">
      <label htmlFor="twoFactorCode" class="label">2FA code</label>
      <div>
        <input class="input" type="text" name="twoFactorCode" id="twoFactorCode"
        autoCapitalize="off" autoCorrect="off" autoComplete="off" minLength="6"
        maxLength="8" required />
      </div>
    </div>
    <div class="scopeFormModal">
      <p>
        <a class="a" href="#">Or use your security key</a>
      </p>
    </div>
  </div>
  <footer class="footer">
    <button type="reset" value="Reset">Back</button>
    <button type="submit" value="Submit">Next</button>
  </footer>
</form>
`;

exports[`ScopeModal step ScopeFormModal initial display with U2F only 1`] = `
<form class="wrapper">
  <div class="content ">
    <div class="scopeFormModal form-row">
      <label htmlFor="password" class="label">password</label>
      <div>
        <input class="input" type="password" name="password" id="password" required
        placeholder="Password" autoFocus />
      </div>
    </div>
    <div class="scopeFormModal form-row">
      <label htmlFor="twoFactorCode" class="label">2FA code</label>
      <div>
        <input class="input" type="text" name="twoFactorCode" id="twoFactorCode"
        autoCapitalize="off" autoCorrect="off" autoComplete="off" minLength="6"
        maxLength="8" required />
      </div>
    </div>
    <div class="scopeFormModal">
      <p>
        <a class="a" href="#">Or use your security key</a>
      </p>
    </div>
  </div>
  <footer class="footer">
    <button type="reset" value="Reset">Back</button>
    <button type="submit" value="Submit">Next</button>
  </footer>
</form>
`;

exports[`ScopeModal step ScopeFormModal initial display with U2F pending 1`] = `
<form class="wrapper">
  <div class="content ">
    <div class="scopeFormModal form-row">
      <label htmlFor="password" class="label">password</label>
      <div>
        <input class="input" type="password" name="password" id="password" required
        placeholder="Password" autoFocus />
      </div>
    </div>
    <div class="scopeFormModal">
      <p>
        <span>Please activate your security key...</span>
        <a class="a" href="#">Cancel</a>
      </p>
    </div>
  </div>
  <footer class="footer">
    <button type="reset" value="Reset">Back</button>
    <button type="submit" value="Submit">Next</button>
  </footer>
</form>
`;

exports[`ScopeModal step ScopeFormModal initial display with U2F resolved 1`] = `
<form class="wrapper">
  <div class="content ">
    <div class="scopeFormModal form-row">
      <label htmlFor="password" class="label">password</label>
      <div>
        <input class="input" type="password" name="password" id="password" required
        placeholder="Password" autoFocus />
      </div>
    </div>
    <div class="scopeFormModal">
      <span>Your security key was used.</span>
      <a class="a" href="#">Undo</a>
    </div>
  </div>
  <footer class="footer">
    <button type="reset" value="Reset">Back</button>
    <button type="submit" value="Submit">Next</button>
  </footer>
</form>
`;

exports[`ScopeModal step ScopeFormModal initial display with a message 1`] = `
<form class="wrapper">
  <div class="content ">
    <div>This is a simple message</div>
    <div class="scopeFormModal form-row">
      <label htmlFor="password" class="label">password</label>
      <div>
        <input class="input" type="password" name="password" id="password" required
        placeholder="Password" autoFocus />
      </div>
    </div>
    <div class="scopeFormModal"></div>
  </div>
  <footer class="footer">
    <button type="reset" value="Reset">Back</button>
    <button type="submit" value="Submit">Next</button>
  </footer>
</form>
`;

exports[`ScopeModal step ScopeFormModal initial display with error 1`] = `
<form class="wrapper">
  <div class="content ">
    <div class="scopeFormModal form-row">
      <label htmlFor="password" class="label">password</label>
      <div>
        <input class="input" type="password" name="password" id="password" required
        placeholder="Password" autoFocus />
      </div>
    </div>
    <div class="scopeFormModal">
      <p>
        <span>An error occurred You can</span>
        <a class="a" href="#">Try again</a>
        <span>or</span>
        <a class="a" href="#">Use a code</a>
        <span>.</span>
      </p>
    </div>
  </div>
  <footer class="footer">
    <button type="reset" value="Reset">Back</button>
    <button type="submit" value="Submit">Next</button>
  </footer>
</form>
`;

exports[`ScopeModal step ScopeFormModal initial display with error 2`] = `
<form class="wrapper">
  <div class="content ">
    <div class="scopeFormModal form-row">
      <label htmlFor="password" class="label">password</label>
      <div>
        <input class="input" type="password" name="password" id="password" required
        placeholder="Password" autoFocus />
      </div>
    </div>
    <div class="scopeFormModal">
      <p>
        <span>Some random error. You can</span>
        <a class="a" href="#">Try again</a>
        <span>or</span>
        <a class="a" href="#">Use a code</a>
        <span>.</span>
      </p>
    </div>
  </div>
  <footer class="footer">
    <button type="reset" value="Reset">Back</button>
    <button type="submit" value="Submit">Next</button>
  </footer>
</form>
`;

exports[`ScopeModal step ScopeFormModal initial display without 2FA 1`] = `
<form class="wrapper">
  <div class="content ">
    <div class="scopeFormModal form-row">
      <label htmlFor="password" class="label">password</label>
      <div>
        <input class="input" type="password" name="password" id="password" required
        placeholder="Password" autoFocus />
      </div>
    </div>
    <div class="scopeFormModal"></div>
  </div>
  <footer class="footer">
    <button type="reset" value="Reset">Back</button>
    <button type="submit" value="Submit">Next</button>
  </footer>
</form>
`;

exports[`ScopeModal step ScopeFormModal possible actions componentDidMount correctly reset creds 1`] = `
preact-render-spy (1 nodes)
-------
<form
  class="wrapper"
  onSubmit={[Function onSubmit]}
  onReset={[Function onReset]}
>
  <div class="content ">
    <div class="scopeFormModal form-row">
      <label
        htmlFor="password"
        class="label"
      >
        password
      </label>
      <div>
        <input
          class="input"
          type="password"
          name="password"
          id="password"
          value="some password"
          required={true}
          placeholder="Password"
          onInput={[Function onInput]}
          autoFocus={true}
         />
      </div>
    </div>
    <div class="scopeFormModal form-row">
      <label
        htmlFor="twoFactorCode"
        class="label"
      >
        2FA code
      </label>
      <div>
        <input
          class="input"
          type="text"
          name="twoFactorCode"
          id="twoFactorCode"
          autoCapitalize="off"
          autoCorrect="off"
          autoComplete="off"
          minLength="6"
          maxLength="8"
          required={true}
          value="123456"
          onInput={[Function onInput]}
         />
      </div>
    </div>
    <div class="scopeFormModal">
      <p>
        <a
          onClick={[Function onClick]}
          class="a"
          href="#"
        >
          Or use your security key
        </a>
      </p>
    </div>
  </div>
  <footer class="footer">
    <button
      type="reset"
      value="Reset"
    >
      Back
    </button>
    <button
      type="submit"
      value="Submit"
      disabled={false}
    >
      Next
    </button>
  </footer>
</form>

`;

exports[`ScopeModal step ScopeFormModal possible actions input password and code updated 1`] = `
preact-render-spy (1 nodes)
-------
<form
  class="wrapper"
  onSubmit={[Function onSubmit]}
  onReset={[Function onReset]}
>
  <div class="content ">
    <div class="scopeFormModal form-row">
      <label
        htmlFor="password"
        class="label"
      >
        password
      </label>
      <div>
        <input
          class="input"
          type="password"
          name="password"
          id="password"
          value="example password"
          required={true}
          placeholder="Password"
          onInput={[Function onInput]}
          autoFocus={true}
         />
      </div>
    </div>
    <div class="scopeFormModal form-row">
      <label
        htmlFor="twoFactorCode"
        class="label"
      >
        2FA code
      </label>
      <div>
        <input
          class="input"
          type="text"
          name="twoFactorCode"
          id="twoFactorCode"
          autoCapitalize="off"
          autoCorrect="off"
          autoComplete="off"
          minLength="6"
          maxLength="8"
          required={true}
          onInput={[Function onInput]}
         />
      </div>
    </div>
    <div class="scopeFormModal">
      <p>
        <a
          onClick={[Function onClick]}
          class="a"
          href="#"
        >
          Or use your security key
        </a>
      </p>
    </div>
  </div>
  <footer class="footer">
    <button
      type="reset"
      value="Reset"
    >
      Back
    </button>
    <button
      type="submit"
      value="Submit"
      disabled={false}
    >
      Next
    </button>
  </footer>
</form>

`;

exports[`ScopeModal step ScopeFormModal possible actions input password and code updated 2`] = `
preact-render-spy (1 nodes)
-------
<form
  class="wrapper"
  onSubmit={[Function onSubmit]}
  onReset={[Function onReset]}
>
  <div class="content ">
    <div class="scopeFormModal form-row">
      <label
        htmlFor="password"
        class="label"
      >
        password
      </label>
      <div>
        <input
          class="input"
          type="password"
          name="password"
          id="password"
          value="example password"
          required={true}
          placeholder="Password"
          onInput={[Function onInput]}
          autoFocus={true}
         />
      </div>
    </div>
    <div class="scopeFormModal form-row">
      <label
        htmlFor="twoFactorCode"
        class="label"
      >
        2FA code
      </label>
      <div>
        <input
          class="input"
          type="text"
          name="twoFactorCode"
          id="twoFactorCode"
          autoCapitalize="off"
          autoCorrect="off"
          autoComplete="off"
          minLength="6"
          maxLength="8"
          required={true}
          value="654321"
          onInput={[Function onInput]}
         />
      </div>
    </div>
    <div class="scopeFormModal">
      <p>
        <a
          onClick={[Function onClick]}
          class="a"
          href="#"
        >
          Or use your security key
        </a>
      </p>
    </div>
  </div>
  <footer class="footer">
    <button
      type="reset"
      value="Reset"
    >
      Back
    </button>
    <button
      type="submit"
      value="Submit"
      disabled={false}
    >
      Next
    </button>
  </footer>
</form>

`;
